@@ -12,6 +12,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -28,17 +29,14 @@ public class SecurityConfig {
         http
                 .csrf(csrf -> csrf.ignoringRequestMatchers(
                         "/api/auth/**",
-                        "/api/users/**",
-                        "/api/chat/**",
-                        "/api/users/**")) // 특정 경로에서 CSRF 비활성화
+                        "/api/**")) // 특정 경로에서 CSRF 비활성화
                 // 세션 비활성화 (JWT 사용)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 // 인증 및 권한 설정
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
                                 "/api/auth/**",
-                                "/api/chat/**",
-                                "/api/users/**").permitAll() // 인증 없이 접근 가능 경로
+                                "/api/**").permitAll() // 인증 없이 접근 가능 경로
                         .anyRequest().authenticated() // 나머지 요청 인증 필요
                 )
                 // CORS 설정
@@ -52,9 +50,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://10.0.2.2"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setAllowedOrigins(Collections.singletonList("*")); // 모든 Origin 허용
+        configuration.setAllowedMethods(Collections.singletonList("*")); // 모든 HTTP Method 허용
+        configuration.setAllowedHeaders(Collections.singletonList("*")); // 모든 Header 허용
         configuration.setAllowCredentials(true); // 쿠키 전송 허용
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
